Bug 122700 - Writer - Can't change shadow color on tab Borders in dialogue Character style
Summary: Writer - Can't change shadow color on tab Borders in dialogue Character style
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.1 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Color-Palettes Writer-Styles-Character
  Show dependency treegraph
 
Reported: 2019-01-14 08:00 UTC by Roman Kuznetsov
Modified: 2019-01-15 16:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example document with custom character style (8.80 KB, application/vnd.oasis.opendocument.text)
2019-01-14 08:01 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-01-14 08:00:42 UTC
Description:
Writer - Can't change shadow color on tab Borders in dialogue Character style

Steps to Reproduce:
1. Open file from attach
2. Open Style in Sidebar
3. Select "Character styles"
4. Right click on custom style "Button" and select "Modify" from context menu
5. Select tab Border in dialogue "Character style"
6. Try change shadow color to Purple
7. Push Apply
8. Nothing happening with text in document

Actual Results:
can't change shadow color

Expected Results:
can change shadow color


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.0.1
Build ID: 0412ee99e862f384c1106d0841a950c4cfaa9df1
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

no repro in 6.1.2 ->regression
Comment 1 Roman Kuznetsov 2019-01-14 08:01:22 UTC
Created attachment 148301 [details]
Example document with custom character style
Comment 2 Durgapriyanka 2019-01-14 16:35:58 UTC
Thank you for reporting the bug.I can confirm this bug in

Version: 6.3.0.0.alpha0+
Build ID: 3c964980da07892a02d5ac721d80558c459532d0
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-12-12_02:07:45
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 3 Xisco Faulí 2019-01-14 19:00:53 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2018-09-03 16:06:49 +0100
committer	Caolán McNamara <caolanm@redhat.com>	2018-09-05 13:36:35 +0200
commit 229483707c3ccb48d008d37f856bbeb6df199a90 (patch)
tree c202bfb4777a66e6095fc971e317794f92399b4a
parent 59b9fc4776940863d905de14e25d74421f7de603 (diff)
weld SvxBorderTabPage

Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 4 Hiromi Kuramoto 2019-01-15 05:50:04 UTC
I also confirm this bug in macOS Sierra.

reproduced in:
Version: 6.2.0.2
Build ID: 2ce5217b30a543f7666022df50f0562f82be0cff
CPU threads: 4; OS: Mac OS X 10.12.5; UI render: default; VCL: osx; 
Locale: en-US (ja_JP.UTF-8); UI-Language: en-US
Calc: threaded
Comment 5 Commit Notification 2019-01-15 13:34:59 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/2d3d55e57b916e19c2c75228f7abeecda52716d6%5E%21

Resolves: tdf#122700 cannot change shadow color

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2019-01-15 13:35:49 UTC
fixed in master, backports in gerrit
Comment 7 Xisco Faulí 2019-01-15 16:14:10 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: c977473546e450ec122f5d3dbc4578d8994962ef
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this!!
Comment 8 Commit Notification 2019-01-15 16:18:30 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/274d7f1e387fa318ac30146a434857ff5bd7bf79%5E%21

Resolves: tdf#122700 cannot change shadow color

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2019-01-15 16:19:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2-0":

https://git.libreoffice.org/core/+/cb2e8390febc26f60d5e89955f981408141f1ced%5E%21

Resolves: tdf#122700 cannot change shadow color

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.