Resolves: tdf#122700 cannot change shadow color

Change-Id: Iee42beb96ff4d059c685173fdde453981b300b3c
Reviewed-on: https://gerrit.libreoffice.org/66360
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>